<resources>
    <string name="app_name">TestToSpeach</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="speech">Speech</string>
    <string name="slow">Slow</string>
    <string name="normal">Normal</string>
    <string name="fast">Fast</string>
    <string name="low">Low</string>
    <string name="high">High</string>
</resources>
