<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/EditTextSpeech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <Button
        android:id="@+id/ButtonSpeech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speech"
        />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
        <Button
            android:id="@+id/ButtonSlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slow"
            />
        <Button
            android:id="@+id/ButtonNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            />
        <Button
            android:id="@+id/ButtonFast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/ButtonLowPitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            />
        <Button
            android:id="@+id/ButtonNormalPitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            />
        <Button
            android:id="@+id/ButtonHighPitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            />
    </LinearLayout>
</LinearLayout>
